@@ -1,3 +1,5 @@
+2008-03-22 - Eric Laffoon <sequitur@kde.org>
+    o LineEdit - added gotfocus event
 2008-03-20 - Eric Laffoon <sequitur@kde.org>
     o made actions sort along with widgets in the connection dialog
     o Tree/Detail (ListView) widget - enabled adding columns
